# lms_python

./: .env.template  .gitignore  README.md  flake.nix  mise.toml  pyproject.toml  setup.ps1  setup.sh
lms/: adapter.py  settings.py  urls.py  views.py
templates/: 404.html  base.html  dashboard.html  home.html
templates/account/: base.html  login.html  signup.html
templates/components/: toggle.html
theme/static_src/src/: styles.css
web/: decorators.py  urls.py  views.py
