[project]
name = "lms"
version = "0.1.0"
description = "Library Management System, made with the stack I am most comfortable with."
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "django==5.2.11",
    "django-allauth==65.15.0",
    "django-cors-headers==4.9.0",
    "django-environ==0.13.0",
    "django-tailwind[cookiecutter,honcho,reload]==4.4.2",
    "djangorestframework==3.16.1",
    "psycopg[binary,pool]==3.3.3",
]
